# ariel-ASA

./: README.md
benchmarks/: CODE_REVIEW_M004-M006.md  PLAN.md
benchmarks/collectors/: spatial_bench.py
benchmarks/cuda/: bench_timing.cuh
benchmarks/host_validation/: adversarial_harness.cpp  flow_harness.cpp
upstream/blaeq/: .clang-format  CMakeLists.txt  LICENSE  NOTICE  README.md
upstream/blaeq/src/: func.hpp  main.cu
upstream/blaeq/src/Data_Structures/: Data_Structures.cu  Data_Structures.cuh  File.cu  File.cuh
upstream/blaeq/src/Kernel/: SpMSpV.cu  SpMSpV.cuh  SpTSpMKernel.cu  SpTSpMKernel.cuh
upstream/blaeq/src/Kmeans/: CUDAKmeans.cu  CUDAKmeans.cuh  Kmeans.cpp  Kmeans.h
upstream/blaeq/src/MergeSort/: MergeSort.cu  MergeSort.cuh
upstream/blaeq/src/Query/: GridCompact.cu  GridCompact.cuh  KNN.cu  KNN.cuh  Query.cu  Query.cuh  RangePruning.cu  RangePruning.cuh  Refactor.cu  Refactor.cuh  check.cuh  compact.cuh
upstream/blaeq/src/Setup/: Setup.cu  Setup.cuh
upstream/blaeq/src/Test/: QueryTest.cu  QueryTest.cuh
upstream/blaeq/src/utils/: NVTXProfiler.cu  NVTXProfiler.cuh
